# substrate-api-client

./: Cargo.toml
client-keystore/: Cargo.toml
compose-macros/: Cargo.toml
node-api/: Cargo.toml
primitives/: Cargo.toml
src/: events.rs  lib.rs  node_metadata.rs
src/examples/: example_benchmark_bulk_xt.rs  example_compose_extrinsic_offline.rs  example_event_callback.rs  example_get_blocks.rs
src/std/: mod.rs
test-no-std/: Cargo.toml
tutorials/api-client-tutorial/: Cargo.toml
