[package]
name = "substrate-api-client"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
env_logger      = { version = "0.7", optional = true }
ws              = { version = "0.9.1", optional = true, features = ["ssl"] }
hex             = { version = "0.4.2", default-features = false }
log             = { version = "0.4", optional = true }
serde           = { version = "1.0", optional = true, features = ["derive"] }
serde_json      = { version = "1.0", optional = true }
thiserror       = { version = "1.0", optional =true }
primitive-types = { version = "0.6.1", optional = true, features = ["codec"] }

codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
sp-core = {default-features = false, features = ["full_crypto"], version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-std = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-metadata = {default-features = false, version = '13.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-version = {optional = true, default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
pallet-balances = {optional = true, default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-system = {optional = true, default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sc-rpc-api = {optional = true, version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}

[dev-dependencies]
camellia-runtime = {path = "../tea-camellia/runtime"}
sp-keyring = {git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
clap = { version = "2.33", features = ["yaml"] }

[features]
default = ["std"]
std = [
  "sc-rpc-api",
	"sp-core/std",
	"codec/std",
	"frame-metadata/std",
	"sp-version",
	"pallet-balances",
	"frame-system",
  "sp-runtime/std",
	"frame-support/std",
	"sp-std/std",
	"serde/std",
	"serde_json",
	"env_logger",
	"log",
	"ws",
	"hex/std",
	"primitive-types",
	"thiserror",
]
# need to add this for the app_crypto macro
full_crypto = []

[[example]]
name = "example_get_storage"
path = "src/examples/example_get_storage.rs"

[[example]]
name = "example_get_blocks"
path = "src/examples/example_get_blocks.rs"

[[example]]
name = "example_transfer"
path = "src/examples/example_transfer.rs"

[[example]]
name = "example_event_callback"
path = "src/examples/example_event_callback.rs"

[[example]]
name = "example_generic_extrinsic"
path = "src/examples/example_generic_extrinsic.rs"

[[example]]
name = "example_print_metadata"
path = "src/examples/example_print_metadata.rs"

[[example]]
name = "example_compose_extrinsic_offline"
path = "src/examples/example_compose_extrinsic_offline.rs"

[[example]]
name = "example_generic_event_callback"
path = "src/examples/example_generic_event_callback.rs"

[[example]]
name = "example_benchmark_bulk_xt"
path = "src/examples/example_benchmark_bulk_xt.rs"

[[example]]
name = "example_sudo"
path = "src/examples/example_sudo.rs"

# DEPRECATED. might work but too much work to maintain, sorry

# needed for contract example
#[dev-dependencies]
#wabt = "0.10.0"

#[dev-dependencies.contracts]
#git = "https://github.com/paritytech/substrate.git"
#branch = "master"
#package = "pallet-contracts"

#[[example]]
#name = "example_contract"
#path = "src/examples/example_contract.rs"

#[[example]]
#name = "example_custom_storage_struct"
#path = "src/examples/example_custom_storage_struct.rs"
