[package]
name = "ac-compose-macros"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }
log = { version = "0.4.14", default-features = false }

# substrate dependencies
sp-runtime = { default-features = false, git = "https://github.com/tearust/substrate.git", branch = "v4.0" }
sp-std = { default-features = false, git = "https://github.com/tearust/substrate.git", branch = "v4.0" }

# local deps
ac-primitives = { path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "sp-runtime/std",
    "sp-std/std",
    # local crates
    "ac-primitives/std",
]
