[package]
name = "ac-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

sp-core = { default-features = false, git = "https://github.com/tearust/substrate.git", branch = "v4.0" }
sp-runtime = { default-features = false, git = "https://github.com/tearust/substrate.git", branch = "v4.0" }
sp-std = { default-features = false, git = "https://github.com/tearust/substrate.git", branch = "v4.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "hex/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
