[package]
name = "api-client-tutorial"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2021"

[dependencies]
substrate-api-client = { path = "../.." }
codec = { package = "parity-scale-codec", features = ["derive"], version = "3.0.0" }

sp-core = { git = "https://github.com/tearust/substrate.git", branch = "v4.0" }
sp-keyring = { git = "https://github.com/tearust/substrate.git", branch = "v4.0" }
